# ara-ml-3

./: README.md  README_DEMO.md  README_PROF_DEMO.md  pyproject.toml
arms_race_alignment/: __init__.py  attacks.py  cli.py  data.py  detectors.py  metrics.py  pipeline.py  updater.py
arms_race_alignment_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: default.yaml  demo.yaml  professor_demo.yaml
data/: data_toy_eval.jsonl  data_toy_train.jsonl
runs_demo/: metrics.json  rolling.csv
runs_prof_demo/: batch_results.csv
scripts/: batch_check.py  check_prompt.py  check_prompt_rt.py  demo.py  plot_metrics.py  prof_demo.py  seed_data.py
slides/: Demo_Slides.md
