
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arms-race-alignment-ml"
version = "0.2.0"
description = "Pure-ML defender-in-the-loop jailbreak defense demo"
authors = [{name = "You"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "regex>=2023.12.25",
    "matplotlib>=3.8",
    "joblib>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6.9", "pre-commit>=3.8.0", "ipykernel"]
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["arms_race_alignment*"]
exclude = ["configs*", "data*", "scripts*", "tests*", ".*"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["arms_race_alignment*"]
exclude = ["configs*", "data*", "scripts*", "tests*", ".*"]
